Convert all the toList calls to collect(Collectors.toList)