@@ -19,6 +19,7 @@ package org.thoughtcrime.securesms;
 import android.content.Intent;
 import android.os.Bundle;
 
+import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 
 import org.signal.core.util.logging.Log;
@@ -58,7 +59,7 @@ public class PushContactSelectionActivity extends ContactSelectionActivity {
   protected final void onFinishedSelection() {
     Intent                resultIntent     = getIntent();
     List<SelectedContact> selectedContacts = contactsFragment.getSelectedContacts();
-    List<RecipientId>     recipients       = Stream.of(selectedContacts).map(sc -> sc.getOrCreateRecipientId()).toList();
+    List<RecipientId>     recipients       = Stream.of(selectedContacts).map(sc -> sc.getOrCreateRecipientId()).collect(Collectors.toList());
 
     resultIntent.putParcelableArrayListExtra(KEY_SELECTED_RECIPIENTS, new ArrayList<>(recipients));
 
