@@ -8,6 +8,7 @@ import androidx.lifecycle.MutableLiveData;
 import androidx.lifecycle.ViewModel;
 import androidx.lifecycle.ViewModelProvider;
 
+import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 
 import org.thoughtcrime.securesms.contactshare.Contact.Name;
@@ -82,7 +83,7 @@ class ContactShareEditViewModel extends ViewModel {
   }
 
   private <E extends Selectable> List<E> trimSelectables(List<E> selectables) {
-    return Stream.of(selectables).filter(Selectable::isSelected).toList();
+    return Stream.of(selectables).filter(Selectable::isSelected).collect(Collectors.toList());
   }
 
   @NonNull
