@@ -120,7 +120,7 @@ class JobController {
   @WorkerThread
   void submitNewJobChain(@NonNull List<List<Job>> chain) {
     synchronized (this) {
-      chain = Stream.of(chain).filter(jobs -> !jobs.isEmpty()).toList();
+      chain = Stream.of(chain).filter(jobs -> !jobs.isEmpty()).collect(Collectors.toList());
 
       if (chain.isEmpty()) {
         Log.w(TAG, "Tried to submit an empty job chain. Skipping.");
@@ -169,8 +169,7 @@ class JobController {
 
       if (dependsOnQueue != null) {
         List<String> inQueue = Stream.of(jobStorage.getJobsInQueue(dependsOnQueue))
-                                     .map(JobSpec::getId)
-                                     .toList();
+                                     .map(JobSpec::getId).collect(Collectors.toList());
 
         allDependsOn.addAll(inQueue);
         aliveDependsOn.addAll(inQueue);
@@ -310,8 +309,7 @@ class JobController {
 
     List<Constraint> constraints = Stream.of(jobStorage.getConstraintSpecs(job.getId()))
                                          .map(ConstraintSpec::getFactoryKey)
-                                         .map(constraintInstantiator::instantiate)
-                                         .toList();
+                                         .map(constraintInstantiator::instantiate).collect(Collectors.toList());
 
 
     Log.i(TAG, JobLogger.format(job, "Scheduling a retry in " + backoffInterval + " ms."));
@@ -330,8 +328,7 @@ class JobController {
       List<JobSpec> updates = Stream.of(jobStorage.getDependencySpecsThatDependOnJob(job.getId()))
                                     .map(DependencySpec::getJobId)
                                     .map(jobStorage::getJobSpec)
-                                    .map(jobSpec -> mapToJobWithInputData(jobSpec, outputData))
-                                    .toList();
+                                    .map(jobSpec -> mapToJobWithInputData(jobSpec, outputData)).collect(Collectors.toList());
 
       jobStorage.updateJobs(updates);
     }
@@ -352,14 +349,13 @@ class JobController {
                                  .map(jobSpec -> {
                                    List<ConstraintSpec> constraintSpecs = jobStorage.getConstraintSpecs(jobSpec.getId());
                                    return createJob(jobSpec, constraintSpecs);
-                                 })
-                                 .toList();
+                                 }).collect(Collectors.toList());
 
     List<Job> all = new ArrayList<>(dependents.size() + 1);
     all.add(job);
     all.addAll(dependents);
 
-    jobStorage.deleteJobs(Stream.of(all).map(Job::getId).toList());
+    jobStorage.deleteJobs(Stream.of(all).map(Job::getId).collect(Collectors.toList()));
     Stream.of(all).forEach(j -> jobTracker.onStateChange(j, JobTracker.JobState.FAILURE));
 
     return dependents;
@@ -594,7 +590,7 @@ class JobController {
       for (Job job : jobList) {
         fullSpecs.add(buildFullSpec(job, dependsOn));
       }
-      dependsOn = Stream.of(jobList).map(Job::getId).toList();
+      dependsOn = Stream.of(jobList).map(Job::getId).collect(Collectors.toList());
     }
 
     jobStorage.insertJobs(fullSpecs);
@@ -622,8 +618,7 @@ class JobController {
                                   job.getParameters().getInitialDelay());
 
     List<ConstraintSpec> constraintSpecs = Stream.of(job.getParameters().getConstraintKeys())
-                                                 .map(key -> new ConstraintSpec(jobSpec.getId(), key, jobSpec.isMemoryOnly()))
-                                                 .toList();
+                                                 .map(key -> new ConstraintSpec(jobSpec.getId(), key, jobSpec.isMemoryOnly())).collect(Collectors.toList());
 
     List<DependencySpec> dependencySpecs = Stream.of(dependsOn)
                                                  .map(depends -> {
@@ -631,8 +626,7 @@ class JobController {
                                                    boolean memoryOnly       = job.getParameters().isMemoryOnly() || (dependsOnJobSpec != null && dependsOnJobSpec.isMemoryOnly());
 
                                                    return new DependencySpec(job.getId(), depends, memoryOnly);
-                                                 })
-                                                 .toList();
+                                                 }).collect(Collectors.toList());
 
     return new FullSpec(jobSpec, constraintSpecs, dependencySpecs);
   }
@@ -660,8 +654,7 @@ class JobController {
       List<ConstraintSpec> constraintSpecs = jobStorage.getConstraintSpecs(minimalJobSpec.getId());
       List<Constraint>     constraints     = Stream.of(constraintSpecs)
                                                    .map(ConstraintSpec::getFactoryKey)
-                                                   .map(constraintInstantiator::instantiate)
-                                                   .toList();
+                                                   .map(constraintInstantiator::instantiate).collect(Collectors.toList());
 
       return Stream.of(constraints).allMatch(Constraint::isMet);
     });
@@ -690,8 +683,7 @@ class JobController {
       Log.e(TAG, "Failed to instantiate job! Failing it and its dependencies without calling Job#onFailure. Crash imminent.");
 
       List<String> failIds = Stream.of(jobStorage.getDependencySpecsThatDependOnJob(jobSpec.getId()))
-                                   .map(DependencySpec::getJobId)
-                                   .toList();
+                                   .map(DependencySpec::getJobId).collect(Collectors.toList());
 
       jobStorage.deleteJob(jobSpec.getId());
       jobStorage.deleteJobs(failIds);
@@ -708,7 +700,7 @@ class JobController {
                   .setLifespan(jobSpec.getLifespan())
                   .setMaxAttempts(jobSpec.getMaxAttempts())
                   .setQueue(jobSpec.getQueueKey())
-                  .setConstraints(Stream.of(constraintSpecs).map(ConstraintSpec::getFactoryKey).toList())
+                  .setConstraints(Stream.of(constraintSpecs).map(ConstraintSpec::getFactoryKey).collect(Collectors.toList()))
                   .setInputData(jobSpec.getSerializedInputData())
                   .build();
   }
